tests/fixtures/positive/release-engineering/test-fixture-accessed-from-production/app/src/main/kotlin/com/example/SamePackageProd.kt
package com.example

class SamePackageProd {
    val fixture = SamePackageFixture()
}

