tests/fixtures/negative/release-engineering/test-fixture-accessed-from-production/app/build/generated/source/kapt/debug/com/example/prod/Generated.kt
package com.example.prod

import com.example.fixtures.FakeUser

class Generated {
    val fixture = FakeUser()
}

